discussion/jgit/138410/138410_rev38_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mergetool merge feature (execute external tool)

see: https://git-scm.com/docs/git-mergetool

* implement mergetool merge function (execute external tool)
* add ExecutionResult and commandExecutionError to ToolException
* handle "base not present" case (empty or null base file path)
* handle deleted (rm) and modified (add) conflicts
* handle settings
 * keepBackup
 * keepTemporaries
 * writeToTemp

Bug: 356832
Change-Id: Id323c2fcb1c24d12ceb299801df8bac51a6d463f
Signed-off-by: Andre Bossert <andre.bossert@siemens.com>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Andrey Loskutov
Date: 2022-05-25 14:16:47.000000000
Message: 
Uploaded patch set 38: Patch Set 37 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-05-25 14:16:58.000000000
Message: 
Patch Set 38:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1293/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-05-25 14:29:09.000000000
Message: 
Patch Set 38: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1293/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-25 15:36:06.000000000
Message: 
Patch Set 38: Code-Review+1

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-27 05:00:08.000000000
Message: 
Patch Set 38: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-27 05:02:15.000000000
Message: 
Change has been successfully merged
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-06-09 10:37:40.000000000
Message: 
Patch Set 38:

(1 comment)
Line:92, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/MergeTool.java -> In DiffTool UTF-8 encoding was explicitly used. Should be addressed in change: [1].

[1] https://git.eclipse.org/r/c/jgit/jgit/+/194019

----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2022-06-15 16:05:17.000000000
Message: 
Patch Set 38:

(1 comment)
Line:83, org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java -> this causes the following errorprone error (run the bazel build on c67d951a0 to reproduce):

org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java:89: error: [DefaultCharset] Implicit use of the platform default charset, which can result in differing behaviour between JVM executions or incorrect behavior if the encoding of the data source doesn't match expectations.
									+ new String(
									  ^
    (see https://errorprone.info/bugpattern/DefaultCharset)
  Did you mean 'result.getStderr().toByteArray(), UTF_8),' or 'result.getStderr().toByteArray(), Charset.defaultCharset()),'?

----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-06-15 16:30:54.000000000
Message: 
Patch Set 38:

(1 comment)
Line:83, org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java -> I added the fix recently: [1].

[1] https://git.eclipse.org/r/c/jgit/jgit/+/194019

----------------------------------------------------------------------------------------------------------------------
Author: Simeon Andreev
Date: 2022-06-16 06:08:31.000000000
Message: 
Patch Set 38:

(1 comment)
Line:83, org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java -> Thanks for fixing this!

----------------------------------------------------------------------------------------------------------------------
